# ForenSight

./: .gitignore  MANIFEST.in  README.md  base.py  forensight.py  kernel.py  models.py  parsers.py  pyproject.toml  requirements.txt  test.py  visualize.py
.github/workflows/: python-publish.yml
